[package]
name = "rust-ratelimit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of the Envoy rate limit service with Redis backend"
license = "MIT OR Apache-2.0"

[dependencies]
# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# gRPC and protobuf
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"

# Local caching
lru = "0.12"

# HTTP server for health/metrics
axum = "0.7"
tower = "0.4"
hyper = "0.14"
http = "0.2"
http-body = "0.4"
moka = { version = "0.12.10", features = ["future"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "debug_startup"
path = "debug_startup.rs"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.15"
